Allow layout content to shrink to fix overflow

--- a/components/Layout.module.scss
+++ b/components/Layout.module.scss
@@ -2,7 +2,7 @@
 
 .grid {
   display: grid;
-  grid-template-columns: 300px 1fr;
+  grid-template-columns: 300px minmax(0, 1fr);
   grid-template-rows: auto 1fr;
   gap: 10px 15px;
   grid-template-areas:
